// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loginModalReducer should handle CLOSE_LOGIN_MODAL action 1`] = `
Object {
  "showModal": false,
}
`;

exports[`loginModalReducer should handle OPEN_LOGIN_MODAL action 1`] = `
Object {
  "showModal": true,
}
`;

exports[`loginModalReducer should return the initial state 1`] = `
Object {
  "showModal": false,
}
`;
